[package]
name = "saimexploit"
version = "0.1.0"
authors = ["Samael <me@jeandudey.tech>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "cookies"] }
url = "2"
scraper = "0.12"
rocksdb = "0.14"
clap = "2.31"
snafu = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
